[package]
name = "backend_project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
tokio-postgres = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.15", features = ["derive"] }
validator_derive = "0.15"
dotenv = "0.15"

